--- a/index.html
+++ b/index.html
@@ -26,11 +26,37 @@
                     <div class="user-col"></div>
                     <!-- /colonna utente -->
 
+                    <!-- colonna notifiche -->
+                    <div class="notifiche"></div>
+                    <!-- /colonna notifiche -->
+
+                    <!-- colonna ricerche -->
+                    <div class="search-col"></div>
+                    <!-- /colonna ricerche -->
+
+                    <!-- lista amici -->
+                    <div class="friends-list"></div>
+                    <!-- /lista amici -->
+
                 </div>
                 <!-- /colonna sinistra -->
 
                 <!-- colonna destra -->
-                <div class="col-dx"></div>
+                <div class="col-dx">
+
+                    <!-- colonna dell'amico -->
+                    <div class="friend-col"></div>
+                    <!-- /colonna dell'amico -->
+
+                    <!-- colonna della chat -->
+                    <div class="chat-col"></div>
+                    <!-- /colonna della chat -->
+
+                    <!-- opzioni della chat -->
+                    <div class="chat-options"></div>
+                    <!-- /opzioni della chat -->
+
+                </div>
                 <!-- /colonna destra -->
 
             </div>
