end colonna sinistra parte statica

--- a/index.html
+++ b/index.html
@@ -23,19 +23,62 @@
                 <div class="col-sn">
 
                     <!-- colonna utente -->
-                    <div class="user-col"></div>
+                    <div class="user-col">
+
+                        <div class="profilo-utente">
+                            <img src="img/avatar_io.jpg" alt="">
+                            <h3>Nome Utente</h3>
+                        </div>
+
+                        <div class="user-icon">
+                            <i class="fas fa-circle-notch"></i>
+                            <i class="fas fa-comment-alt"></i>
+                            <i class="fas fa-ellipsis-v"></i>
+                        </div>
+                        
+                    </div>
                     <!-- /colonna utente -->
 
                     <!-- colonna notifiche -->
-                    <div class="notifiche"></div>
+                    <div class="notifiche">
+
+                        <div class="notification-icon">
+                            <i class="fas fa-bell-slash"></i>
+                        </div>
+
+                        <div class="notification-options">
+                            <h4>Ricevi notifiche di nuovi messaggi</h4>
+                            <a href="#">Attiva notifiche desktop</a>
+                        </div>
+
+                    </div>
                     <!-- /colonna notifiche -->
 
                     <!-- colonna ricerche -->
-                    <div class="search-col"></div>
+                    <div class="search-col">
+
+                        <div class="search-icon">
+                            <i class="fas fa-search"></i>
+                        </div>
+                        <div class="search-input">
+                            <input type="text" placeholder="Cerca o inizia una nuova chat">
+                        </div>
+
+                    </div>
                     <!-- /colonna ricerche -->
 
                     <!-- lista amici -->
-                    <div class="friends-list"></div>
+                    <div class="friends-list">
+
+                        <div class="list-item">
+
+                            <img src="img/avatar_1.jpg" alt="">
+                            <div class="list-name">
+                                <h3>Michele</h3>
+                            </div>
+                        </div>
+
+                    </div>
                     <!-- /lista amici -->
 
                 </div>
