--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <div class="user-col">
 
                         <div class="profilo-utente">
-                            <img src="img/avatar_io.jpg" alt="">
-                            <h3>Nome Utente</h3>
+                            <img src="img/avatar_7.jpg" alt="">
+                            <h3>Sergjio Cizmja</h3>
                         </div>
 
                         <div class="user-icon">
