--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="search-col">
 
                         <div class="search-icon">
-                            <i class="fas fa-search" @click="searchUser(cercaUtenti)"></i>
+                            <i class="fas fa-search" @click="searchUser()"></i>
                         </div>
                         <div class="search-input">
                             <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="cercaUtenti">
